Added ability to prevent payment for specific order statuses

--- a/src/plg_pcp_btcpay/language/en-GB/en-GB.plg_pcp_btcpay_server.ini
+++ b/src/plg_pcp_btcpay/language/en-GB/en-GB.plg_pcp_btcpay_server.ini
@@ -99,6 +99,9 @@ PLG_PCP_BTCPAY_SERVER_OPTION_SHOW_INFO_BEFORE_PAYMENT_DESC="Additional informati
 PLG_PCP_BTCPAY_SERVER_FIELD_CHECKOUT_INFO_LABEL="Checkout Information"
 PLG_PCP_BTCPAY_SERVER_FIELD_CHECKOUT_INFO_DESC="Enter any additional information to display to the customer during the checkout process. This will be shown when 'Show Information Before Payment' mode is selected."
 
+PLG_PCP_BTCPAY_SERVER_FIELD_RESTRICTED_PAYMENT_STATUSES_LABEL="Disable Payments for these Order Statuses"
+PLG_PCP_BTCPAY_SERVER_FIELD_RESTRICTED_PAYMENT_STATUSES_DESC="Choose the order statuses where payments should be disabled. For example, you can prevent payments when the order status is 'Cancelled'."
+
 PLG_PCP_BTCPAY_SERVER_PAYMENT_POPUP_INSTRUCTION="A payment popup will appear shortly. If it does not appear, please %s to proceed."
 PLG_PCP_BTCPAY_SERVER_PAYMENT_POPUP_INSTRUCTION_LINK_TEXT="click here"
 PLG_PCP_BTCPAY_SERVER_PAYMENT_POPUP_INSTRUCTION_BUTTON_TEXT="Pay Now"
@@ -110,3 +113,4 @@ PLG_PCP_BTCPAY_SERVER_PAYMENT_SETTLED_DOWNLOAD_MESSAGE="Thank you for your payme
 PLG_PCP_BTCPAY_SERVER_PAYMENT_EXPIRED_MESSAGE="Your payment was not completed as the invoice expired. When you are ready, please <a href=\"%s\">try again</a>."
 PLG_PCP_BTCPAY_SERVER_PAYMENT_INVALID_MESSAGE="Your payment was invalid. When you are ready, please <a href=\"%s\">try again</a>."
 PLG_PCP_BTCPAY_SERVER_PAYMENT_REDIRECT_MESSAGE="If you are not automatically redirected, click <a href=\"%s\">here</a> to continue."
+PLG_PCP_BTCPAY_SERVER_PAYMENT_NOT_ALLOWED_MESSAGE="Payment cannot be processed because your order has been changed to a status that prevents payment. Please contact support if you need assistance."
